05-workload.yaml
kind: Pod
apiVersion: v1
metadata:
  namespace: default
  name: pod-aaa
  labels:
    app.kubernetes.io/name: service-a
spec:
  containers:
    - command:
        - /agnhost
        - netexec
        - --http-port
        - "8080"
        - --http-override
        - "/hostname"
      image: registry.k8s.io/e2e-test-images/agnhost:2.43
      name: pod-a
---
kind: Service
apiVersion: v1
metadata:
  name: service-a
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: service-a
  ports:
    # Default port used by the image
    - port: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: pod-bbb
  namespace: default
  labels:
    app.kubernetes.io/name: service-b
spec:
  containers:
    - command:
        - /agnhost
        - netexec
        - --http-port
        - "8080"
        - --http-override
        - "/hostname"
      image: registry.k8s.io/e2e-test-images/agnhost:2.43
      name: pod-b
---
kind: Service
apiVersion: v1
metadata:
  name: service-b
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: service-b
  ports:
    # Default port used by the image
    - port: 8080
